Sun Sep 21 17:22:45 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java: lhs.memref may
	  be null when lhs is extern variable.

Sun Sep 21 05:43:28 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java: optimize
	  constant load.

	* net/loveruby/cflat/asm/ImmediateValue.java: accept any Literal.

	* net/loveruby/cflat/ast/LiteralNode.java: new method #asmLiteral.

	* net/loveruby/cflat/ast/CastNode.java: is not constant when cast
	  is effective.

	* net/loveruby/cflat/compiler/Compiler.java: new option
	  --verbose-asm.

	* net/loveruby/cflat/compiler/Options.java: ditto.

	* net/loveruby/cflat/compiler/CodeGenerator.java: ditto.

	* net/loveruby/cflat/asm/Assembler.java: new method
	  #indentComment, #unindentComment.

	* net/loveruby/cflat/asm/AsmComment.java: indent comments.

Sun Sep 21 03:04:16 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java: fix local
	  variables offset after compiling function body, to allow saving
	  really-used callee-saved registers only.

	* net/loveruby/cflat/asm/IndirectMemoryReference.java: allow
	  fixing offset out of consructor.

	* net/loveruby/cflat/asm/AsmStatistics.java: new class.

	* net/loveruby/cflat/asm/Assembly.java: support
	  #collectStatistics.

	* net/loveruby/cflat/asm/Instruction.java: ditto.

	* net/loveruby/cflat/asm/AsmOperand.java: ditto.

	* net/loveruby/cflat/asm/Register.java: ditto.

	* net/loveruby/cflat/asm/AbsoluteAddress.java: ditto.

	* net/loveruby/cflat/asm/DirectMemoryReference.java: ditto.

	* net/loveruby/cflat/asm/ImmediateValue.java: ditto.

	* net/loveruby/cflat/ast/Scope.java: refactoring: rename method:
	  #allChildren -> #allScopes.

	* net/loveruby/cflat/ast/Scope.java (allScopes): should include
	  receiver scope itself.

	* net/loveruby/cflat/ast/LocalScope.java (allVariables): did not
	  wrongly included current scope's variables.
