@@ -1,0 +1,8 @@
+import stdio;
+
+int
+main(void)
+{
+    puts = NULL;   // causes core dump
+    return 0;
+}
